Hiscores now viewable in hiscores menu.