@@ -9,6 +9,19 @@ version = "1.0-SNAPSHOT"
 
 application {
     mainClass.set("com.game.application.SnakeApp")
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
+        "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
+        "--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+        "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+        "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+        "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+        "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+        "--add-opens", "javafx.base/javafx.util=ALL-UNNAMED"
+    )
 }
 
 javafx {
